# spellr-rs

./: .lsp.json  .spellr.yml  Cargo.toml  README.md  cosmo-linker.sh  x86_64-unknown-linux-cosmo.json
.github/workflows/: ci.yml  release.yml
.spellr_wordlists/: english.txt  lorem.txt  rust.txt
src/: check.rs  cli.rs  config.rs  embedded_wordlists.rs  file_list.rs  language.rs  line_tokenizer.rs  main.rs  string_format.rs  suggester.rs  token.rs  token_regexps.rs  tokenizer.rs  wordlist.rs
src/key_tuner/: mod.rs  naive_bayes.rs  possible_key.rs  stats.rs
src/reporter/: autocorrect_reporter.rs  default_reporter.rs  interactive.rs  mod.rs  quiet_reporter.rs  wordlist_reporter.rs
wordlists/: default_spellr.yml
