[package]
name = "spellr"
version = "0.12.6"
edition = "2021"
description = "Spell check your source code"
license = "MIT"

[[bin]]
name = "spellr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
fancy-regex = "0.13"
regex = "1"
ignore = "0.4"
rayon = "1"
unicode-normalization = "0.1"
strsim = "0.11"
edit-distance = "2"
crossterm = "0.27"
rustyline = "14"
once_cell = "1"
indexmap = { version = "2", features = ["serde"] }
globset = "0.4"

[dev-dependencies]
tempfile = "3"
